--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <img src="images/moriom-01.jpg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>At first take my salam. Assalamu Alaikum. Today, I want to say something.😘</p>
                 </div>
             </div>
@@ -30,10 +30,10 @@
                     <img src="images/moriom-02.jpg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
-                    <p>Everybody know that becauseLegend says, when you
+                    <h3>😘Moriom😘</h3>
+                    <p>Everybody know that because Legend says, when you
                         can not sleep at night. it is because you are awake in someone elese Dream.</p>
-                        You are the woman who stays awake in my dreams.😘
+                        You are the that girl who stays awake in my dreams.😘
                     </div>
             </div>
             <div class="photo-frame">
@@ -41,7 +41,7 @@
                     <img src="images/moriom-03.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>I am following my heart and my heart want you. You are my everything. Nothing or no one 
                         will ever change the way. I feel for you.😘
                     </p>
@@ -52,7 +52,7 @@
                     <img src="images/moriom-04.jpg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>I promise myself that i will never leave you because you are the love of my life. You 
                         are my one and only love.😘
                     </p>
@@ -63,9 +63,9 @@
                     <img src="images/moriom-05.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p> You are the best girl I ever meet,
-                        You r my dream girl spicy sweet.
+                        You are my dream girl spicy sweet.
                         I miss you I need you I love you in deep,
                         You are my passion my heart beat. Today, together are will be one Love and one soul😘.</p>
                 </div>
@@ -75,7 +75,7 @@
                     <img src="images/moriom-06.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>You not know that when i think of you i have a smile on my face.And my heart 
                         as well.Ever since you came in to my life. You are all that i need.😘
                     </p>
@@ -86,7 +86,7 @@
                     <img src="images/moriom-07.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>I would do anything for you. No matter what happens.I will not change anything how i feel
                         abou you.All the bad things that went througt are worth it.😘
                     </p>
@@ -97,7 +97,7 @@
                     <img src="images/moriom-08.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>As long as i am with you. You are my cntire world.You are always br there
                         for me and i also promise you.😘 </p>
                 </div>
@@ -107,7 +107,7 @@
                     <img src="images/moriom-09.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>I will always be there for you and never make you bad mood.Always make you happy😘.</p>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     <img src="images/moriom-10.JPG" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>I love you.
                         And i will love you until i die.If I die i want we meet again fall in love again.😘
                     </p>
@@ -127,7 +127,7 @@
                     <img src="images/moriom-11.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>In this valentine I am lucky to have a valentine like you. 
                         I am madly,truely,deeply,seriously And
                 passionately in love with you.😘</p>
@@ -138,8 +138,11 @@
                     <img src="images/moriom-12.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
-                    <p></p>
+                    <h3>😘Moriom😘</h3>
+                    <p>You are the one that enters my life from nowwhere but suddenly
+                        becomes my world itself. i can not go on without you,my love.
+                        Please, stay with me forever. 
+                    </p>
                 </div>
             </div>
             <div class="photo-frame">
@@ -147,7 +150,7 @@
                     <img src="images/moriom-13.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>I Love You. That means I for me, (L) is for the way you look at me.
                         (O) is for the only one i see,(V) is very very i want you,(E) is ever
                         more then anyone that you abore. You for yourself.😘
@@ -159,7 +162,7 @@
                     <img src="images/moriom-14.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p>I wanna be love with you...
                         Please tell me i am your and accept my love😍
                         I want to be mine now and always.Love you more and more Moriom.😘</p>
@@ -170,7 +173,7 @@
                     <img src="images/moriom-15.jpeg" alt="">
                 </div>
                 <div class="photo-details">
-                    <h3>Moriom</h3>
+                    <h3>😘Moriom😘</h3>
                     <p> In this valentine i will say i am your. Now you please tell me you
                         are mine. I love you My love Moriom. Ummmmmah😘
                     </p>
